# tupy

./: .gitignore  404.html  LICENSE  README.md  TODO  example.py  gui.py  index.html  input.py  inspector.py  mkdocs.yml  pyproject.toml  requirements.txt  search.html  tkfoot.py  tkmain.py  tupy.py
.github/workflows/: main.yml
atualizacao/: index.html
classes/: index.html
docs/: atualizacao.md  classes.md  encapsulamento.md  entrada.md  es.md  exemplo.md  grupos.md  imagens.md  index.md  instalacao.md  interface.md  tupyobject.md
encapsulamento/: index.html
entrada/: index.html
es/: index.html
examples/: all_examples.py  drone-stars.py
examples/pt-br/: 00-completo.py  01-captura-estrelas.py  01-corrida.py  01-hello.py  02-classe.py  02a-rotaciona.py  02b-velocidade.py  02c-disparo.py  03-browser.py  arvore.py  composite.py  encapsulamento.py  keyboard-mouse.py
exemplo/: index.html
grupos/: index.html
imagens/: index.html
instalacao/: index.html
interface/: index.html
search/: search_index.json
src/: 01-corrida.py  coverage.sh  example.py  mypy.sh
src/tupy/: __init__.py  _update-po.sh  browser.py  gui.py  gui_utils.py  history.py  input.py  input_map.py  inspector.py  inspector_model.py  member_pane.py  registry.py  translation.py  tupyobject.py
src/tupy/locale/: tupy.pot
src/tupy/locale/en/LC_MESSAGES/: tupy.po  tupy.pot
src/tupy/locale/pt_BR/LC_MESSAGES/: tupy.mo  tupy.po
tupyobject/: index.html
