[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tupy"
version = "0.0.1"
authors = [
  { name="Rodrigo Rocha", email="rodrigorgs@ufba.br" },
]
description = "Toolkit for understanding Python"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pillow>=10.0.0"
]

[project.urls]
"Homepage" = "https://github.com/rodrigorgs/tupy"
"Bug Tracker" = "https://github.com/rodrigorgs/tupy/issues"
